--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -6,3 +6,5 @@ $corner-radius: 20px;
 
 $transparency: 0.3;
 $border-darken: 40%;
+
+$word-spacing: 10px;;
